# complexity-visualizer

./: .gitignore  COUPLING_GUIDE.md  EXAMPLES.md  METRICS_GUIDE.md  METRIC_CONFIGURATIONS.md  README.md  compute_files.sh  pyproject.toml
complexity_visualizer/: build_graph.py  cli.py  cli_main.py  convert_codecharta.py  dot_parser.py  enhanced_metrics.py  graph_filter.py  io_utils.py  metrics.py  models.py  node_formatter.py  util_io.py
complexity_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
complexity_visualizer/analyzers/: __init__.py  base.py  java.py
complexity_visualizer/cli/: build_graph_cli.py  convert_cli.py
complexity_visualizer/codecharta_converter/: __init__.py  converter.py
complexity_visualizer/commands/: __init__.py  build_graph.py  convert.py  generate_dots.py  run.py  visualize.py
complexity_visualizer/core/: __init__.py  graph_builder.py  metric_computation.py  metrics.py  models.py  parsers.py
complexity_visualizer/exporters/: __init__.py  codecharta.py  intermediate.py
complexity_visualizer/graph_builder/: __init__.py  build_graph.py  dot_parser.py  enhanced_metrics.py  graph_filter.py  io_utils.py  metrics.py  models.py  node_formatter.py
complexity_visualizer/legacy_cli/: __init__.py  build_graph_cli.py  convert_cli.py
complexity_visualizer/utils/: __init__.py  auto_detect.py  (+2 more)
config/: projects.json
docs/: METRICS_DOCUMENTATION.md  VISUALIZATION_GUIDE.md
scripts/: cli.py  to_codecharta.py
tests/: test_architecture_metrics.py  test_class_level_cycles.py  test_hub_score.py
(+13 files in other folders)
