[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complexity-visualizer"
version = "2.0.0"
description = "Analyze and visualize software complexity with CodeCharta"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Complexity Visualizer Team"}]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["complexity_visualizer*"]
exclude = ["tests*", "from*", "config*", "dist*", "example*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
complexity-viz = "complexity_visualizer.cli:main"

[tool.pyright]
pythonVersion = "3.12"